--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100dvh;
     font-family: 'Poppins', sans-serif;
 	font-size: 0.8rem;
     background-image: linear-gradient(to right, #434343 0%, black 100%);
