--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,14 @@ h1 {
     display: none;
 }
 
-.container {
-    max-width: 720px;
-    max-height: 600px;
+@media (max-width: 767px) {
+    h1 {
+        font-size: 1.8rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
     }
 }
