--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Gill Sans", math;
 	font-size: 0.8rem;
     background-image: linear-gradient(to right, #434343 0%, black 100%);
     color: #fff;
@@ -41,12 +41,13 @@ h1 {
 
 @media (max-width: 767px) {
     h1 {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
     }
 }
 
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
+		margin-top: 2px;
     }
 }
